# gptables

./: .coveragerc  .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  default_styles.yaml  gptheme.yaml  iris_gptable.xlsx  pyproject.toml  readthedocs.yml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: PR_to_dev.md  PR_to_master.md
.github/workflows/: ci.yml
addn_files/: basic_example.py  costs-of-reoffending-supplementary-tables.ods
addn_files/examples/: iris.py
addn_files/themes/: gptheme.yaml
docs/: requirements.txt
docs/source/: changelog.rst  checklist.rst  conf.py  contributers.rst  doc.api.rst  doc.changelog.rst  doc.cover.rst  doc.gptable.rst  doc.theme.rst  doc.wrappers.rst  index.rst  usage.rst  use.api.rst
example_data/: iris.csv  iris.xlsx
examples/: .iris.py.swp  .~lock.iris.xlsx#  .~lock.iris_gptable.xlsx#  basic_example.py  cost_of_reoffending.py  costs-of-reoffending-by-type-of-reoffence.xlsx  iris.py  iris.xlsx  iris_gptable.xlsx  iris_manual.py
gptables/: __init__.py
gptables/core/: .api.py.swp  Workbook.py  api.py  contentsheet.py  cover.py  gptable.py  notesheet.py  theme.py  themes.py  workbook.py  workbook_wrapper.py  worksheet_wrapper.py  wrappers.py
gptables/examples/: R_install_dependency_file.R  R_iris_gptable.xlsx  cor_multiple_sheets.py  coreB.csv  core_gptable.xlsx  cost_of_reoffending.py  gptables_demo_code.py  iris.R  iris.py  iris_additional_formatting.py  iris_additional_formatting_gptable.xlsx  iris_cover.py  iris_gptable.xlsx  iris_notes.py  iris_personal_theme.py  iris_quick_and_dirty.py  penguins_additional_formatting.py  penguins_cover.py  penguins_minimal.py  penguins_minimal_alternate.py  penguins_multiple_sheets.py  penguins_notes.py  penguins_theme.py  python_core_gptable.xlsx  python_iris_gptable.xlsx  sheet 1a.csv  survey_data.csv  survey_data.py  survey_data_notes.csv  titanic.py  titanic_gptable.xlsx  titanic_notes.csv
gptables/helpers/: pickle_themes.py  unpickle_themes.py
gptables/test/: actual_workbook.xlsx  expected_workbook.xlsx  test_additional_formatting_gptable.xlsx  test_additional_formatting_syntax.py  test_api.py  test_cover.py  test_gptable.py  test_theme.py  test_wrappers.py
gptables/theme_pickles/: gptheme.pickle  iris_test_theme.pickle
gptables/themes/: gptheme.pickle  gptheme.yaml  iris_test_theme.yaml  (+2 more)
(+5 files in other folders)
